# BLinCS

./: BLinCS_DEVELOPER_GUIDE.md  mkdocs.yml  pyproject.toml  setup4developers.txt
docs/: developer_guide.md  index.md
docs/api/: blwave_simulation.md  forcing.md  main_run.md  nonlinear.md  plotting.md  vel_base.md  zdiff.md
docs/examples/: 01_wave_forced_bl.md
src/blincs/: blwave_simulation.py  forcing.py  main_run.py  nonlinear.py  plotting.py  vel_base.py  zdiff.py
tests/Farm2Farm/: Farm2Farm_Hossein.py
tests/NonlinearEffects/: Non_lin_compare.py
